--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.12",
+    "@google/generative-ai": "^0.21.0",
     "@react-email/components": "^0.0.32",
+    "ai": "^4.1.41",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
