--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.1.12",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^4.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
