--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
