--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -26,7 +27,9 @@
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.475.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongoose": "^8.9.4",
+    "motion": "^12.4.7",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -34,7 +37,7 @@
     "react-email": "^3.0.6",
     "react-hook-form": "^7.54.2",
     "resend": "^4.1.1",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
     "zod": "^3.24.2"
