--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.32",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^4.1.41",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
